# catXAS

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  MODERNIZATION.md  Makefile  README.md  README.rst  pyproject.toml
.github/workflows/: ci.yml
catxas/: depreciated functions.py  experiment.py  fitting.py  general.py  mcrals.py  pca.py  plot.py  process.py  xas.py
docs/: SSRL_BL102_XAS_DataStructure.json  conf.py  installation.rst
notebooks/: 0.0 Example - Summary of Scattering Path Lengths from FEFF Inp Files.ipynb  1.0 Example - Correlate Process parameters to XAS spectra.ipynb  2.0.0 Example - Experiment Class -  XAS Data Processing.ipynb  2.0.1 Example - Experiment Class - Remove Raw Data From Experiment.ipynb  2.1 Example - Experiment Class -  Normalized XANES-EXAFS-FT.ipynb  2.2 Example - Experiment Class -  XAS-Process Stream Correlation.ipynb  2.3 Example - Experiment Class -  LCF of XANES Data.ipynb  2.4 Example - Experiment Class - Exporting Data.ipynb  3.0 Example - Experiment Class - QEXAFS Data Processing - Parameter determination using small data set.ipynb  3.1 Example - Experiment Class - QEXAFS Data Processing - Data Import, Cleanup, Process Correlation - large data sets.ipynb  3.2 Example - Experiment Class - QEXAFS Data Processing - Bulk Calibration, Normalization.ipynb  3.3 Example - Experiment Class - QEXAFS Data Processing - XAS Interpolation-Export for PCA MCR-ALS.ipynb  Add Process Data to Pickle.ipynb  BL specific XAS data structures.ipynb  Combine Biologic Files.ipynb  Example 1.0 - Correlate Process parameters to XAS spectra.ipynb  Example 2.0 - Experiment Class -  XAS Data Import and Calibration.ipynb  Example 2.1 - Experiment Class -  Normalize XANES Spectra.ipynb  Example 2.2 - Experiment Class -  EXAFS Extraction and Fourier-Transform.ipynb  Example 2.3 - Experiment Class -  XAS-Process Correlation.ipynb  Example 2.4 - Experiment Class -  LCF of XANES Data.ipynb  Example 2.5 - Experiment Class - Exporting Data.ipynb  Example 3.0 - Experiment Class - Single Notebook XAS Processing.ipynb  Example 4.0 - Experiment Class - QXAS - Screen Subset of Data for XAS Processing Parameterization.ipynb  Example 4.1 - Experiment Class - QXAS - Bulk XAS Processing - Process Correlation - Interpolation - Export.ipynb  Example 5.0 - XAS Analysis - PCA.ipynb  Example 5.1 - XAS Analysis - MCR-ALS.ipynb  Get Subset of Data for QXAS Param Setting.ipynb  Single File Workflow.ipynb
sample results/: First_Last_LCFReport.csv  First_mid_Last_LCFReport.csv  Sn Refs vs Spectra vs MCRALS ES.prj  SnO2_TPR_CVE.csv  SnO2_TPR_LCF_Fit 1.csv  SnO2_TPR_LCF_Fit 2.csv  SnO2_TPR_MCRALS_C.csv  SnO2_TPR_MCRALS_S.csv  SnO2_TPR_MCR_concentrations.csv  SnO2_TPR_MCR_residuals.csv  SnO2_TPR_MCR_spectra.csv  SnO2_TPR_MCR_summary.txt  SnO2_TPR_NormXANES.csv  SnO2_TPR_PCA_eigenspectra_with_mean.csv  SnO2_TPR_PCA_scores.csv  SnO2_TPR_Process_Correlation.csv  SnO2_TPR_SVD_CVE.csv  SnO2_TPR_eigenspectra_with_mean.csv  SnO2_TPR_pca_Eigenspectra.csv  SnO2_TPR_pca_Score.csv  SnO2_TPR_scores.csv  qxas batch params.pickle
sample results/Spectra LCF Results from Fit 1/: 20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0001_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0002_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0003_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0004_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0005_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0006_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0007_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0008_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0009_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0010_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0011_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0012_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0013_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0014_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0015_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0016_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0017_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0018_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0019_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0020_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0021_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0022_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0023_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0024_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0025_LCFsummary.csv  20210614_SnO2_H2_TPR_Sn_EXAFS_92.tra_0026_LCFsummary.csv  (+24 more)
tests/: conftest.py  test_catxas.py  test_cli.py  test_experiment_pipeline.py  test_full_dataset.py  test_general.py  test_mcrals.py  test_pca.py  test_plot.py  test_process.py  test_xas.py
(+52 files in other folders)
