[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "catxas"
version = "0.1.0"
description = "Python package for manipulation and analysis of in-situ Catalysis XAS data collected via CXAS at SSRL"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
    { name = "Adam S. Hoffman", email = "ashoff@slac.stanford.edu" },
]
keywords = ["catxas", "xas", "xafs", "catalysis", "ssrl"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Runtime dependencies — every package directly imported by catxas/*.py.
# (numpy/scipy/matplotlib/pandas also arrive transitively via xraylarch,
#  but the code imports them directly so we declare them explicitly.)
dependencies = [
    "click>=8.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "glob2>=0.7",
    "xraylarch>=0.9.70",
]

[project.optional-dependencies]
# Interactive Jupyter workflow used by the notebooks/ — install with:
#   uv sync --extra notebooks
notebooks = [
    "jupyter>=1.0",
    "ipywidgets>=8.0",
]
# Multivariate analysis (catxas.pca / catxas.mcrals) — PCA/SVD, knee detection,
# and MCR-ALS. Not needed for the core XAS pipeline; install with:
#   uv sync --extra analysis
analysis = [
    "scikit-learn>=1.3",
    "kneed>=0.8",
    "pymcr>=0.5",
    "ipywidgets>=8.0",
]

[project.scripts]
catxas = "catxas.cli:main"

[project.urls]
Homepage = "https://github.com/ahoffm02/catXAS"

# Modern dev tooling (replaces the stale 2019-era requirements_dev.txt).
# Installed automatically by `uv sync`; skip with `uv sync --no-dev`.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "build>=1.2",
    "twine>=5.0",
    "bump-my-version>=0.20",
    "sphinx>=7.0",
    "sphinx-autobuild>=2024.0",
    "myst-parser>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["catxas"]

[tool.ruff]
target-version = "py310"
line-length = 120
# notebooks/ use an interactive (non-package) import style; docs/ is generated.
exclude = ["docs", "notebooks"]
# Honor `exclude` even when pre-commit passes file paths explicitly.
force-exclude = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Deselect the full-dataset regression by default; run it with `pytest -m slow`.
addopts = "-m 'not slow' --strict-markers"
markers = [
    "slow: full-dataset (50-spectrum) regression against committed sample results",
]
